# 1d_morphology

./: .gitignore  CONVENTIONS.md  LICENSE  README.md  baseline.py  closing.py  dilation.py  erosion.py  opening.py  pyproject.toml  test_baseline.m  test_baseline.py
morphology_1d/: __init__.py  closing.py  erosion.py  opening.py
