[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "morphology"
version = "0.1.0"
description = "Morphological operations for signal processing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/flatmax/1d_morphology"
Repository = "https://github.com/flatmax/1d_morphology"
Issues = "https://github.com/flatmax/1d_morphology/issues"

[tool.setuptools]
py-modules = ["baseline", "closing", "dilation", "erosion", "opening", "structfunct"]
