[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "morphology-1d"
version = "0.1.0"
description = "Simple morphological filters in one dimension"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/flatmax/morphology_1d"
Repository = "https://github.com/flatmax/morphology_1d"
Issues = "https://github.com/flatmax/morphology_1d/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["morphology_1d*"]

[tool.setuptools.package-data]
"*" = ["*.pdf"]
